--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,18 @@
 {
+  "manifest_version": 2,
+  "name": "SeeContent",
+  "version": "1.0",
   
-    "manifest_version": 2,
-    "name": "SeeContent",
-    "version": "1.0",
+  "description": "Open largest image or video in a new tab",
+  "permissions": [
+    "activeTab"
+  ],
   
-    "description": "Open largest image or video in a new tab",
-    "content_scripts": [
-      {
-        "matches": ["<all_urls>"],
-        "js": ["seeContent.js"]
-      }
-    ]
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["seeContent.js"]
+    }
+  ]
   
-  }
+  }    
